--- a/todo-microservice/src/main/resources/todo-service.yml
+++ b/todo-microservice/src/main/resources/todo-service.yml
@@ -15,7 +15,7 @@ spring:
     hibernate:
       .ddl-auto: update
   application:
-    name: Todo Service
+    name: todo-service
 
 eureka:
   client:
