--- a/todo-microservice/pom.xml
+++ b/todo-microservice/pom.xml
@@ -19,8 +19,20 @@
         </dependency>
         <dependency>
             <groupId>org.todo.api</groupId>
-            <artifactId>exceptional-handling</artifactId>
+            <artifactId>request-response-handlers</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
