--- a/user-microservice/src/main/resources/user-service.yml
+++ b/user-microservice/src/main/resources/user-service.yml
@@ -15,7 +15,7 @@ spring:
     hibernate:
       .ddl-auto: update
   application:
-    name: User Service
+    name: user-service
 
 eureka:
   client:
