--- a/api-gateway/src/main/resources/api-gateway.yml
+++ b/api-gateway/src/main/resources/api-gateway.yml
@@ -13,8 +13,9 @@ server:
 
 eureka:
   client:
+    fetch-registry: true
+    register-with-eureka: true
     serviceUrl:
-      defaultZone: http://localhost:1111/eureka
+      defaultZone: ${EUREKA_SERVER_ADDRESS:http://localhost:8761/eureka}
     instance:
-      hostname: localhost
-      leaseRenewalIntervalInSeconds: 240
+      prefer-ip-address: true
