--- a/todo-microservice/src/main/resources/todo-service.yml
+++ b/todo-microservice/src/main/resources/todo-service.yml
@@ -2,6 +2,18 @@ server:
   port: 8082
 
 spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/microservice-todo-app
+    username: postgres
+    password: Jenkins@2020
+    show-sql: true
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    hibernate:
+      .ddl-auto: update
   application:
     name: todo-service
 
