Mongo DB and API Gateway working 1. Integrated mongo db database. 2. Changed the configuration of the api-gateway.yml to support api-gateway calls.

--- a/api-gateway/src/main/resources/api-gateway.yml
+++ b/api-gateway/src/main/resources/api-gateway.yml
@@ -3,17 +3,13 @@ spring:
     name: api-gateway
   cloud:
     gateway:
-#      discovery:
-#        locator:
-#          enabled: true
-#          lower-case-service-id: true
       routes:
         - id: user-microservice
-          uri: lb://user-microservice
+          uri: lb://user-service
           predicates:
-            - Path=/todo/users/**
+            - Path=/todo/user/**
         - id: todo-microservice
-          uri: lb://todo-microservice
+          uri: lb://todo-service
           predicates:
             - Path=/todo/items/**
 
