--- a/service-registration/src/main/resources/registration-server.yml
+++ b/service-registration/src/main/resources/registration-server.yml
@@ -4,6 +4,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+  server:
+    renewalPercentThreshold: 0.33
 
 server:
   port: 1111
