Mongo DB and API Gateway working 1. Implemented JWT Authentication in the API gateway layer. 2. Able to generate Jwt token and validate based on username and password. 3. Added WebFlux dependency for accessing endpoints via API-Gateway

--- a/api-gateway/src/main/resources/api-gateway.yml
+++ b/api-gateway/src/main/resources/api-gateway.yml
@@ -4,14 +4,24 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: user-microservice
-          uri: lb://user-service
+        - id: user-service
+          uri: lb://USER-SERVICE
           predicates:
             - Path=/todo/user/**
-        - id: todo-microservice
+          filters:
+            - AuthenticationFilter
+
+        - id: todo-service
           uri: lb://todo-service
           predicates:
             - Path=/todo/items/**
+          filters:
+            - AuthenticationFilter
+
+        - id: security-service
+          uri: lb://security-service
+          predicates:
+            - Path=/todo/auth/**
 
 
 server:
